--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -9,7 +9,9 @@ merge.factor=1000
 buffered.docs=1000
 max.field.length=1000
 max.read.length=10000000
+# \\\\Ikube\\D\\cluster\\indexes
 index.directory.path=./indexes
+# \\\\Ikube\\D\\cluster\\indexes\\backup
 index.directory.path.backup=./indexes/backup
 jdbc.batch.size=10000
 internet.batch.size=1000
