--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-war</artifactId>
 	<packaging>war</packaging>
-	<version>2.1.0</version>
+	<version>2.1.1-SNAPSHOT</version>
 
 	<properties>
 		<jetty.version>6.1.11</jetty.version>
@@ -20,12 +20,12 @@
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>2.1.0</version>
+		<version>2.1.1</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<build>
-		<finalName>${project.groupId}</finalName>
+		<finalName>${project.artifactId}-${project.version}</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/java</directory>
@@ -39,22 +39,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.7.1</version>
-				<!-- <configuration>
-					<skip>true</skip>
-				</configuration> -->
-				<!-- <executions>
-					<execution>
-						<id>surefire</id>
-						<phase>install</phase>
-						<goals>
-							<goal>test</goal>
-						</goals>
-						<configuration>
-							<skip>false</skip>
-							<forkMode>once</forkMode>
-						</configuration>
-					</execution>
-				</executions> -->
 			</plugin>
 			<plugin>
 				<artifactId>maven-failsafe-plugin</artifactId>
@@ -65,18 +49,13 @@
 					<includes>
 						<include>**/*Integration*.java</include>
 					</includes>
-					<!-- <excludes>
-						<exclude>**/*Test*.java</exclude>
-						<exclude>**/*Strategy*.java</exclude>
-					</excludes> -->
 				</configuration>
 				<executions>
 					<execution>
 						<id>failsafe</id>
-						<!-- <phase>test</phase> -->
 						<goals>
-							<goal>integration-test</goal>
 							<!-- <goal>verify</goal> -->
+							<goal>integration-test</goal>
 						</goals>
 					</execution>
 				</executions>
@@ -84,7 +63,6 @@
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
-				<!-- <version>7.4.4.v20110707</version> -->
 				<version>6.1.25</version>
 				<configuration>
 					<stopKey>stop</stopKey>
@@ -164,11 +142,20 @@
 			<plugin>
 				<groupId>com.googlecode.maven-gcu-plugin</groupId>
 				<artifactId>maven-gcu-plugin</artifactId>
-				<version>1.0</version>
+				<version>1.1</version>
+				<executions>
+					<execution>
+						<id>gcode-upload</id>
+						<phase>release</phase>
+						<goals>
+							<goal>upload</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
-					<serverId>googlecode</serverId> <!-- default: googlecode -->
-					<failsOnError>true</failsOnError> <!-- default: false -->
-					<projectName>ikube</projectName> <!-- default: ${project.artifactId} -->
+					<serverId>googlecode</serverId>
+					<failsOnError>true</failsOnError>
+					<projectName>ikube</projectName>
 					<uploads>
 						<upload>
 							<file>${project.build.directory}/${project.artifactId}-${project.version}.${project.packaging}</file>
@@ -230,35 +217,6 @@
 			<version>${jetty.version}</version>
 			<scope>test</scope>
 		</dependency>
-
-		<!-- <dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>jsp-api</artifactId>
-			<version>2.1</version>
-			<type>jar</type>
-			<scope>provided</scope>
-		</dependency> -->
-		<!-- <dependency>
-			<groupId>jspapi</groupId>
-			<artifactId>jsp-api</artifactId>
-			<version>2.0</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency> -->
-		<!--<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>taglibs</groupId>
-			<artifactId>standard</artifactId>
-			<version>1.1.2</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>-->
 
 		<dependency>
 			<groupId>tomcat</groupId>
