--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project 
-	xmlns="http://maven.apache.org/POM/4.0.0" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ikube</groupId>
 	<artifactId>ikube-core</artifactId>
 	<packaging>jar</packaging>
-	<version>2.1.1-SNAPSHOT</version>
+	<version>2.1.1</version>
 
 	<properties>
 		<main.class>ikube.Ikube</main.class>
@@ -282,4 +279,10 @@
 			</plugin>
 		</plugins>
 	</build>
+
+  <scm>
+    <connection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-2.1.1/trunk/code/ikube-core</connection>
+    <developerConnection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-2.1.1/trunk/code/ikube-core</developerConnection>
+    <url>https://ikube.googlecode.com/svn/code/ikube-core/tags/ikube-2.1.1/svn/code/ikube-core</url>
+  </scm>
 </project>
