--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-core</artifactId>
 	<packaging>jar</packaging>
-	<version>2.1.1</version>
+	<version>2.1.2-SNAPSHOT</version>
 
 	<properties>
 		<main.class>ikube.Ikube</main.class>
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>2.1.1</version>
+		<version>2.1.2-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
@@ -279,10 +279,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <connection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-2.1.1/trunk/code/ikube-core</connection>
-    <developerConnection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-2.1.1/trunk/code/ikube-core</developerConnection>
-    <url>https://ikube.googlecode.com/svn/code/ikube-core/tags/ikube-2.1.1/svn/code/ikube-core</url>
-  </scm>
 </project>
