--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project 
-	xmlns="http://maven.apache.org/POM/4.0.0" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	
-	xsi:schemaLocation=" 
-		http://maven.apache.org/POM/4.0.0 
-		http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="    http://maven.apache.org/POM/4.0.0    http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ikube</groupId>
 	<artifactId>ikube-war</artifactId>
 	<packaging>war</packaging>
-	<version>2.1.1-SNAPSHOT</version>
+	<version>2.1.1</version>
 
 	<properties>
 		<jetty.version>6.1.11</jetty.version>
@@ -261,4 +255,10 @@
 		</dependency>
 	</dependencies>
 
+
+  <scm>
+    <connection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-2.1.1/trunk/code/ikube-war</connection>
+    <developerConnection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-2.1.1/trunk/code/ikube-war</developerConnection>
+    <url>https://ikube.googlecode.com/svn/code/ikube-war/tags/ikube-2.1.1/svn/code/ikube-war</url>
+  </scm>
 </project>
