Updated the release url.
git-svn-id: http://ikube.googlecode.com/svn/trunk@564 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -691,12 +691,12 @@
 	<distributionManagement>
 		<site>
 			<id>google-code</id>
-			<url>svn:http://ikube.googlecode.com/svn/trunk/</url>
+			<url>svn:http://ikube.googlecode.com/svn/site/</url>
 		</site>
 		<repository>
 			<id>google-code</id>
 			<uniqueVersion>false</uniqueVersion>
-			<url>svn:http://ikube.googlecode.com/svn/trunk/</url>
+			<url>svn:http://ikube.googlecode.com/svn/repo/</url>
 		</repository>
 		<!-- use the following if you're not using a snapshot version. -->
 		<!-- <repository>
