Updated the svn url.
git-svn-id: http://ikube.googlecode.com/svn/trunk@567 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -675,7 +675,7 @@
 	</repositories>
 
 	<scm>
-		<url>http://ikube.googlecode.com/svn/trunk</url>
+		<url>http://ikube.googlecode.com/svn</url>
 		<connection>scm:svn:http://ikube.googlecode.com/svn/trunk</connection>
 		<developerConnection>scm:svn:http://ikube.googlecode.com/svn/trunk</developerConnection>
 	</scm>
