--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ikube</groupId>
 	<artifactId>ikube</artifactId>
 	<packaging>pom</packaging>
-	<version>2.1.1-SNAPSHOT</version>
+	<version>2.1.1</version>
 
 	<properties>
 		<targetJdk>1.6</targetJdk>
@@ -675,9 +674,9 @@
 	</repositories>
 
 	<scm>
-		<url>https://ikube.googlecode.com/svn/trunk</url>
-		<connection>scm:svn:https://ikube.googlecode.com/svn/trunk</connection>
-		<developerConnection>scm:svn:https://ikube.googlecode.com/svn/trunk</developerConnection>
+		<url>https://ikube.googlecode.com/svn/tags/ikube-2.1.1/trunk</url>
+		<connection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-2.1.1/trunk</connection>
+		<developerConnection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-2.1.1/trunk</developerConnection>
 	</scm>
 
 	<pluginRepositories>
