--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,14 @@
 					<artifactId>findbugs-maven-plugin</artifactId>
 					<version>2.3.2</version>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>2.2.1</version>
+					<configuration>
+						<workingDirectory>target/checkout/trunk</workingDirectory>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
