Updated the poms.
git-svn-id: http://ikube.googlecode.com/svn/trunk@597 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -1,7 +1,7 @@
 project.directory=.
 project.name=ikube
-project.version=1.8
-ikube.war=ikube.war
+ikube.version=2.1.2
+ikube.war=ikube-${ikube.version}.war
 
 sleep=30
 
