--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-core</artifactId>
 	<packaging>jar</packaging>
-	<version>2.1.2-SNAPSHOT</version>
+	<version>2.1.2</version>
 
 	<properties>
 		<main.class>ikube.Ikube</main.class>
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>2.1.2-SNAPSHOT</version>
+		<version>2.1.2</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
@@ -130,7 +130,7 @@
 						<goals>
 							<goal>install-file</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>pre-clean</phase>
 						<configuration>
 							<groupId>com.ibm.db2.jcc</groupId>
 							<artifactId>db2jcc4</artifactId>
@@ -145,7 +145,7 @@
 						<goals>
 							<goal>install-file</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>pre-clean</phase>
 						<configuration>
 							<groupId>com.ibm.db2.jcc_license_cu</groupId>
 							<artifactId>db2jcc_license_cu</artifactId>
@@ -160,7 +160,7 @@
 						<goals>
 							<goal>install-file</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>pre-clean</phase>
 						<configuration>
 							<groupId>oracle.ojdbc6</groupId>
 							<artifactId>ojdbc6</artifactId>
@@ -175,7 +175,7 @@
 						<goals>
 							<goal>install-file</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>pre-clean</phase>
 						<configuration>
 							<groupId>org.nfunk</groupId>
 							<artifactId>jep</artifactId>
@@ -190,7 +190,7 @@
 						<goals>
 							<goal>install-file</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>pre-clean</phase>
 						<configuration>
 							<groupId>aspose</groupId>
 							<artifactId>aspose.cells</artifactId>
@@ -205,7 +205,7 @@
 						<goals>
 							<goal>install-file</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>pre-clean</phase>
 						<configuration>
 							<groupId>aspose</groupId>
 							<artifactId>aspose.pdf</artifactId>
@@ -220,7 +220,7 @@
 						<goals>
 							<goal>install-file</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>pre-clean</phase>
 						<configuration>
 							<groupId>aspose</groupId>
 							<artifactId>aspose.slides</artifactId>
@@ -235,7 +235,7 @@
 						<goals>
 							<goal>install-file</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>pre-clean</phase>
 						<configuration>
 							<groupId>aspose</groupId>
 							<artifactId>aspose.words</artifactId>
@@ -250,7 +250,7 @@
 						<goals>
 							<goal>install-file</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>pre-clean</phase>
 						<configuration>
 							<groupId>canyon</groupId>
 							<artifactId>canyon</artifactId>
@@ -265,7 +265,7 @@
 						<goals>
 							<goal>install-file</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>pre-clean</phase>
 						<configuration>
 							<groupId>jai</groupId>
 							<artifactId>jai.codec</artifactId>
