--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-core</artifactId>
 	<packaging>jar</packaging>
-	<version>2.1.2-SNAPSHOT</version>
+	<version>2.1.2</version>
 
 	<properties>
 		<main.class>ikube.Ikube</main.class>
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>2.1.2-SNAPSHOT</version>
+		<version>2.1.2</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
