--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube</artifactId>
 	<packaging>pom</packaging>
-	<version>2.1.2-SNAPSHOT</version>
+	<version>2.1.2</version>
 
 	<properties>
 		<targetJdk>1.6</targetJdk>
@@ -683,9 +683,9 @@
 	</repositories>
 
 	<scm>
-		<url>https://ikube.googlecode.com/svn/trunk</url>
-		<connection>scm:svn:https://ikube.googlecode.com/svn/trunk</connection>
-		<developerConnection>scm:svn:https://ikube.googlecode.com/svn/trunk</developerConnection>
+		<url>https://ikube.googlecode.com/svn/tags/ikube-2.1.2</url>
+		<connection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-2.1.2</connection>
+		<developerConnection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-2.1.2</developerConnection>
 	</scm>
 
 	<pluginRepositories>
