--- a/pom.xml
+++ b/pom.xml
@@ -707,7 +707,7 @@
 			<name>ikube</name>
 			<layout>default</layout>
 			<uniqueVersion>true</uniqueVersion>
-			<url>dav:http://ikube.dyndns.org:9000/content/repositories/internal</url>
+			<url>http://ikube.dyndns.org:9000/content/repositories/internal</url>
 		</repository>
 		<!-- <repository>
 			<id>google-code</id>
