--- a/pom.xml
+++ b/pom.xml
@@ -702,13 +702,20 @@
 			<!-- svn:https://ikube.googlecode.com/svn/site/ -->
 			<url>file:C:/Users/Administrator/.m2/repository</url>
 		</site>
+
 		<repository>
+			<id>ikube</id>
+			<name>ikube-releases</name>
+			<url>http://ikube.dyndns.org:9000/artifactory/libs-release-local</url>
+		</repository>
+		
+		<!-- <repository>
 			<id>ikube</id>
 			<name>ikube</name>
 			<layout>default</layout>
 			<uniqueVersion>true</uniqueVersion>
 			<url>http://ikube.dyndns.org:9000/content/repositories/internal</url>
-		</repository>
+		</repository> -->
 		<!-- <repository>
 			<id>google-code</id>
 			<uniqueVersion>false</uniqueVersion>
