Removed the Google Code upload plugin.
git-svn-id: http://ikube.googlecode.com/svn/trunk@632 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -134,7 +134,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
 				<groupId>com.googlecode.maven-gcu-plugin</groupId>
 				<artifactId>maven-gcu-plugin</artifactId>
 				<version>1.1</version>
@@ -162,7 +162,7 @@
 						</upload>
 					</uploads>
 				</configuration>
-			</plugin>
+			</plugin> -->
 		</plugins>
 	</build>
 
