--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+<project 
+	xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+	xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ikube</groupId>
 	<artifactId>ikube-core</artifactId>
 	<packaging>jar</packaging>
-	<version>2.1.2-SNAPSHOT</version>
+	<version>2.1.3-SNAPSHOT</version>
 
 	<properties>
 		<main.class>ikube.Ikube</main.class>
 		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
+		<memory.parameters>-Xms1024m -Xmx1536m -XX:PermSize=64m -XX:MaxPermSize=128m</memory.parameters>
+		<serenity.parameters>${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</serenity.parameters>
 	</properties>
 	
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>2.1.2-SNAPSHOT</version>
+		<version>2.1.3-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
@@ -62,10 +68,9 @@
 						<configuration>
 							<skip>false</skip>
 							<forkMode>once</forkMode>
-							<argLine>-javaagent:../../serenity/serenity.jar -Xms1024m -Xmx1536m -XX:PermSize=64m -XX:MaxPermSize=128m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>
+							<argLine>-javaagent:../../serenity/serenity.jar ${memory.parameters} ${serenity.parameters}</argLine>
 							<excludes>
 								<exclude>**/TextParserTest.java</exclude>
-								<!-- <exclude>**/DataBaseJpaTest.java</exclude> -->
 							</excludes>
 						</configuration>
 					</execution>
@@ -119,163 +124,6 @@
 						<version>2.1.0</version>
 					</dependency>
 				</dependencies>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-install-plugin</artifactId>
-				<version>2.3</version>
-				<executions>
-					<execution>
-						<id>install-db2-driver</id>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<phase>pre-clean</phase>
-						<configuration>
-							<groupId>com.ibm.db2.jcc</groupId>
-							<artifactId>db2jcc4</artifactId>
-							<version>9.7.2</version>
-							<packaging>jar</packaging>
-							<file>libs/drivers/db2jcc4-9.7.2.jar</file>
-							<generatePom>true</generatePom>
-						</configuration>
-					</execution>
-					<execution>
-						<id>install-db2-driver-license</id>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<phase>pre-clean</phase>
-						<configuration>
-							<groupId>com.ibm.db2.jcc_license_cu</groupId>
-							<artifactId>db2jcc_license_cu</artifactId>
-							<version>9.7.2</version>
-							<packaging>jar</packaging>
-							<file>libs/drivers/db2jcc_license_cu-9.7.2.jar</file>
-							<generatePom>true</generatePom>
-						</configuration>
-					</execution>
-					<execution>
-						<id>install-oracle-driver</id>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<phase>pre-clean</phase>
-						<configuration>
-							<groupId>oracle.ojdbc6</groupId>
-							<artifactId>ojdbc6</artifactId>
-							<version>11</version>
-							<packaging>jar</packaging>
-							<file>libs/drivers/ojdbc6-11.jar</file>
-							<generatePom>true</generatePom>
-						</configuration>
-					</execution>
-					<execution>
-						<id>install-jep</id>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<phase>pre-clean</phase>
-						<configuration>
-							<groupId>org.nfunk</groupId>
-							<artifactId>jep</artifactId>
-							<version>2.4.1</version>
-							<packaging>jar</packaging>
-							<file>libs/tools/jep-2.4.1.jar</file>
-							<generatePom>true</generatePom>
-						</configuration>
-					</execution>
-					<execution>
-						<id>install-aspose-cells</id>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<phase>pre-clean</phase>
-						<configuration>
-							<groupId>aspose</groupId>
-							<artifactId>aspose.cells</artifactId>
-							<version>7.0.0</version>
-							<packaging>jar</packaging>
-							<file>libs/aspose/aspose-cells-7.0.0.jar</file>
-							<generatePom>true</generatePom>
-						</configuration>
-					</execution>
-					<execution>
-						<id>install-aspose-pdf</id>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<phase>pre-clean</phase>
-						<configuration>
-							<groupId>aspose</groupId>
-							<artifactId>aspose.pdf</artifactId>
-							<version>2.9.0</version>
-							<packaging>jar</packaging>
-							<file>libs/aspose/aspose-pdf-2.9.0-jdk16.jar</file>
-							<generatePom>true</generatePom>
-						</configuration>
-					</execution>
-					<execution>
-						<id>install-aspose-slides</id>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<phase>pre-clean</phase>
-						<configuration>
-							<groupId>aspose</groupId>
-							<artifactId>aspose.slides</artifactId>
-							<version>2.6.0</version>
-							<packaging>jar</packaging>
-							<file>libs/aspose/aspose.slides-2.6.0.jar</file>
-							<generatePom>true</generatePom>
-						</configuration>
-					</execution>
-					<execution>
-						<id>install-aspose-words</id>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<phase>pre-clean</phase>
-						<configuration>
-							<groupId>aspose</groupId>
-							<artifactId>aspose.words</artifactId>
-							<version>7.0.0</version>
-							<packaging>jar</packaging>
-							<file>libs/aspose/aspose.words.jdk16-7.0.0.jar</file>
-							<generatePom>true</generatePom>
-						</configuration>
-					</execution>
-					<execution>
-						<id>install-canyon</id>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<phase>pre-clean</phase>
-						<configuration>
-							<groupId>canyon</groupId>
-							<artifactId>canyon</artifactId>
-							<version>0.9.8</version>
-							<packaging>jar</packaging>
-							<file>libs/tools/canyon-0.9.8.jar</file>
-							<generatePom>true</generatePom>
-						</configuration>
-					</execution>
-					<execution>
-						<id>install-jai-codec</id>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<phase>pre-clean</phase>
-						<configuration>
-							<groupId>jai</groupId>
-							<artifactId>jai.codec</artifactId>
-							<version>1.1.3</version>
-							<packaging>jar</packaging>
-							<file>libs/tools/jai_codec-1.1.3-alpha.jar</file>
-							<generatePom>true</generatePom>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
