Made the site repository local again.
git-svn-id: http://ikube.googlecode.com/svn/trunk@644 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -656,7 +656,7 @@
 		<site>
 			<id>ikube</id>
 			<name>ikube-releases</name>
-			<url>http://ikube.dyndns.org:9000/artifactory/libs-release-local</url>
+			<url>file:C:/Users/Administrator/.m2/repository</url>
 		</site>
 		<repository>
 			<id>ikube</id>
