Updated the documentation.
git-svn-id: http://ikube.googlecode.com/svn/trunk@659 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -2,6 +2,7 @@ project.directory=.
 project.name=ikube
 ikube.version=2.1.2
 ikube.war=ikube-${ikube.version}.war
+ikube.configuration.jar=configuration.jar
 
 sleep=30
 
