--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -159,12 +159,12 @@
 						<configuration>
 							<target>
 								<!-- Delete the index directories in the cluster. -->
-								<echo message="Deleting indexes : " />
+								<!-- <echo message="Deleting indexes : " />
 								<delete includeemptydirs="true" failonerror="false">
 									<fileset dir="${cluster.directory}/">
 										<include name="**/indexes/**"  />
 									</fileset>
-								</delete>
+								</delete> -->
 								<!-- Delete the ikube deployed directories in the cluster. -->
 								<echo message="Deleting old deployment directories : " />
 								<delete includeemptydirs="true" failonerror="false">
@@ -184,7 +184,9 @@
 								<move file="${tomcat.2}/${webapps}/${final.name}" tofile="${tomcat.2}/${webapps}/${ikube.war}" />
 								<move file="${tomcat.3}/${webapps}/${final.name}" tofile="${tomcat.3}/${webapps}/${ikube.war}" />
 								<!-- Start the cluster of Tomcats. -->
+								<echo message="Copying configuration to Tomcat bin : " />
 								<ant antfile="build.xml" target="copy.configuration" inheritrefs="true" />
+								<echo message="Starting the cluster of Tomcats : " />
 								<ant antfile="build.xml" target="start.tomcat.cluster" inheritrefs="true" />
 							</target>
 						</configuration>
