Updated some tests, the gui and the configuration.
git-svn-id: http://ikube.googlecode.com/svn/trunk@665 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -9,10 +9,10 @@ merge.factor=1000
 buffered.docs=1000
 max.field.length=1000
 max.read.length=10000000
-# \\\\Ikube\\D\\cluster\\indexes
+# \\\\Ikube\\D\\cluster\\apache-tomcat-6.0.29-1\\bin\\indexes
 index.directory.path=./indexes
 # \\\\Ikube\\D\\cluster\\indexes\\backup
-index.directory.path.backup=./indexes/backup
+index.directory.path.backup=${index.directory.path}/backup
 jdbc.batch.size=10000
 internet.batch.size=1000
 file.batch.size=1000
