--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -27,3 +27,5 @@ jenkins.home=D:/apache-tomcat-6.0.26
 jenkins.bin=${jenkins.home}/bin
 
 configuration.directory=./target/configuration
+
+ikube.configuration.directory=./ikube
