Updated the reset logic.
git-svn-id: http://ikube.googlecode.com/svn/trunk@672 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -1,7 +1,7 @@
 ## This file should not be modified by clients generally ##
 
 # The delay before the scheduled tasks start executing
-delay=60000
+delay=120000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the GeoSpatial index
@@ -47,11 +47,13 @@ ikube.jdbc.userid=sa
 ikube.jdbc.password=
 ikube.jdbc.url=jdbc:h2:file:ikube
 ikube.jdbc.driver=org.h2.Driver
+ikube.jdbc.dictionary=h2(batchLimit=1000)
 
 # ikube.dataSource=nonXaDataSourceDb2
 # ikube.persistenceUnit=IkubePersistenceUnitDb2
 # ikube.dataSourceType=DB2
 # ikube.jdbc.userid=db2admin
 # ikube.jdbc.password=db2admin
-# ikube.jdbc.url=jdbc:db2://ikube:50000/ikube
+# ikube.jdbc.url=jdbc:db2://ikube.dyndns.org:50000/ikube
 # ikube.jdbc.driver=com.ibm.db2.jcc.DB2Driver
+# ikube.jdbc.dictionary=db2(batchLimit=1000)
